# gnomepy-testing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docker/: pom.xml  run_comparison.sh
gnomepy_testing/: compare_outputs.py  listing_resolver.py
gnomepy_testing/capture_proxy/: __init__.py  __main__.py  exchange_connector.py  server.py
gnomepy_testing/client/: __init__.py  exchange_parsers.py  proxy_client.py  run_client.py
gnomepy_testing/network/: __init__.py  protocol_handler.py  transport.py
gnomepy_testing/output/: __init__.py  binary_handler.py
tests/: test_compare_outputs.py
