[project]
name = "gnomepy-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "mprey",email = "masonprey7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gnomepy (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
